libbeat/reader/syslog/rfc5424_gen.go

//line parser/parser_rfc5424.rl:1
// Code generated by ragel. DO NOT EDIT.
package syslog

import (
    "errors"
    "io"
)

//line rfc5424_gen.go:12
const rfc5424_start int = 1
const rfc5424_first_final int = 24
const rfc5424_error int = 0

const rfc5424_en_main int = 1


//line parser/parser_rfc5424.rl:12


type machineState struct {
    sdID string
    sdParamName string
    sdValueEscapes []int
}

// ParseRFC5424 parses an RFC 5424-formatted syslog message.
func parseRFC5424(data string) (message, error) {
    var errs []error
    var p, cs, tok int

    pe := len(data)
    eof := len(data)
    m := message{
        priority: -1,
    }

    
//line rfc5424_gen.go:41
	{
	cs = rfc5424_start
	}

//line rfc5424_gen.go:46
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 27:
		goto st_case_27
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	}
	goto st_out
	st_case_1:
		if data[p] == 60 {
			goto st2
		}
		goto tr0
tr0:
//line parser/common.rl:42

        errs = append(errs, &ParseError{Err: io.ErrUnexpectedEOF, Pos: p+1})
        p--

    
	goto st0
//line rfc5424_gen.go:123
st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if 33 <= data[p] && data[p] <= 126 {
			goto tr2
		}
		goto tr0
tr2:
//line parser/common.rl:4

        tok = p
    
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line rfc5424_gen.go:148
		if data[p] == 62 {
			goto tr4
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st3
		}
		goto tr0
tr4:
//line parser/common.rl:8

        if err := m.setPriority(data[tok:p]); err != nil {
            errs = append(errs, &ValidationError{Err: err, Pos: tok+1})
        }
    
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line rfc5424_gen.go:169
		if data[p] == 62 {
			goto tr6
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto tr5
		}
		goto tr0
tr5:
//line parser/common.rl:4

        tok = p
    
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line rfc5424_gen.go:188
		switch data[p] {
		case 32:
			goto tr7
		case 62:
			goto tr9
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st5
		}
		goto tr0
tr7:
//line parser/rfc5424.rl:19

        if err := m.setVersion(data[tok:p]); err != nil {
            errs = append(errs, &ValidationError{Err: err, Pos: tok+1})
        }
    
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line rfc5424_gen.go:212
		if data[p] == 45 {
			goto st7
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr11
		}
		goto tr0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		if data[p] == 32 {
			goto st8
		}
		goto tr0
tr32:
//line parser/common.rl:14

        if err := m.setTimestampRFC3339(data[tok:p]); err != nil {
            errs = append(errs, &ValidationError{Err: err, Pos: tok+1})
        }
    
	goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
//line rfc5424_gen.go:242
		if 33 <= data[p] && data[p] <= 126 {
			goto tr13
		}
		goto tr0
tr13:
//line parser/common.rl:4

        tok = p
    
	goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
//line rfc5424_gen.go:258
		if data[p] == 32 {
			goto tr14
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st9
		}
		goto tr0
tr14:
//line parser/common.rl:26

        m.setHostname(data[tok:p])
    
	goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line rfc5424_gen.go:277
		if 33 <= data[p] && data[p] <= 126 {
			goto tr16
		}
		goto tr0
tr16:
//line parser/common.rl:4

        tok = p
    
	goto st11
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
//line rfc5424_gen.go:293
		if data[p] == 32 {
			goto tr17
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st11
		}
		goto tr0
tr17:
//line parser/rfc5424.rl:11

        m.setAppName(data[tok:p])
    
	goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
//line rfc5424_gen.go:312
		if 33 <= data[p] && data[p] <= 126 {
			goto tr19
		}
		goto tr0
tr19:
//line parser/common.rl:4

        tok = p
    
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line rfc5424_gen.go:328
		if data[p] == 32 {
			goto tr20
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st13
		}
		goto tr0
tr20:
//line parser/rfc5424.rl:7

        m.setProcID(data[tok:p])
    
	goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
//line rfc5424_gen.go:347
		if 33 <= data[p] && data[p] <= 126 {
			goto tr22
		}
		goto tr0
tr22:
//line parser/common.rl:4

        tok = p
    
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line rfc5424_gen.go:363
		if data[p] == 32 {
			goto tr23
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st15
		}
		goto tr0
tr23:
//line parser/rfc5424.rl:15

        m.setMsgID(data[tok:p])
    
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line rfc5424_gen.go:382
		switch data[p] {
		case 45:
			goto st24
		case 91:
			goto tr26
		}
		goto tr0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		if data[p] == 32 {
			goto st25
		}
		goto tr0
tr37:
//line parser/rfc5424.rl:25

        m.setRawSDValue(data[tok:p])
    
	goto st25
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
//line rfc5424_gen.go:410
		goto tr35
tr35:
//line parser/common.rl:4

        tok = p
    
	goto st26
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
//line rfc5424_gen.go:423
		goto st26
tr26:
//line parser/common.rl:4

        tok = p
    
	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line rfc5424_gen.go:436
		switch data[p] {
		case 92:
			goto st19
		case 93:
			goto tr0
		}
		goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 92:
			goto st19
		case 93:
			goto st27
		}
		goto st18
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		if data[p] == 34 {
			goto st18
		}
		if 92 <= data[p] && data[p] <= 93 {
			goto st18
		}
		goto tr0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 32:
			goto tr37
		case 91:
			goto st17
		}
		goto tr0
tr11:
//line parser/common.rl:4

        tok = p
    
	goto st20
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
//line rfc5424_gen.go:491
		switch data[p] {
		case 43:
			goto st21
		case 58:
			goto st21
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st21
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st21
				}
			case data[p] >= 65:
				goto st21
			}
		default:
			goto st22
		}
		goto tr0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		if data[p] == 32 {
			goto tr32
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st20
		}
		goto tr0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 32:
			goto tr32
		case 43:
			goto st21
		case 58:
			goto st21
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st21
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st21
				}
			case data[p] >= 65:
				goto st21
			}
		default:
			goto st22
		}
		goto tr0
tr9:
//line parser/common.rl:8

        if err := m.setPriority(data[tok:p]); err != nil {
            errs = append(errs, &ValidationError{Err: err, Pos: tok+1})
        }
    
	goto st23
tr6:
//line parser/common.rl:8

        if err := m.setPriority(data[tok:p]); err != nil {
            errs = append(errs, &ValidationError{Err: err, Pos: tok+1})
        }
    
//line parser/common.rl:4

        tok = p
    
	goto st23
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
//line rfc5424_gen.go:584
		switch data[p] {
		case 32:
			goto tr7
		case 62:
			goto tr6
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto tr5
		}
		goto tr0
	st_out:
	_test_eof2: cs = 2; goto _test_eof
	_test_eof3: cs = 3; goto _test_eof
	_test_eof4: cs = 4; goto _test_eof
	_test_eof5: cs = 5; goto _test_eof
	_test_eof6: cs = 6; goto _test_eof
	_test_eof7: cs = 7; goto _test_eof
	_test_eof8: cs = 8; goto _test_eof
	_test_eof9: cs = 9; goto _test_eof
	_test_eof10: cs = 10; goto _test_eof
	_test_eof11: cs = 11; goto _test_eof
	_test_eof12: cs = 12; goto _test_eof
	_test_eof13: cs = 13; goto _test_eof
	_test_eof14: cs = 14; goto _test_eof
	_test_eof15: cs = 15; goto _test_eof
	_test_eof16: cs = 16; goto _test_eof
	_test_eof24: cs = 24; goto _test_eof
	_test_eof25: cs = 25; goto _test_eof
	_test_eof26: cs = 26; goto _test_eof
	_test_eof17: cs = 17; goto _test_eof
	_test_eof18: cs = 18; goto _test_eof
	_test_eof19: cs = 19; goto _test_eof
	_test_eof27: cs = 27; goto _test_eof
	_test_eof20: cs = 20; goto _test_eof
	_test_eof21: cs = 21; goto _test_eof
	_test_eof22: cs = 22; goto _test_eof
	_test_eof23: cs = 23; goto _test_eof

	_test_eof: {}
	if p == eof {
		switch cs {
		case 26:
//line parser/common.rl:30

        m.setMsg(data[tok:p])
    
		case 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23:
//line parser/common.rl:42

        errs = append(errs, &ParseError{Err: io.ErrUnexpectedEOF, Pos: p+1})
        p--

    
		case 27:
//line parser/rfc5424.rl:25

        m.setRawSDValue(data[tok:p])
    
		case 25:
//line parser/common.rl:4

        tok = p
    
//line parser/common.rl:30

        m.setMsg(data[tok:p])
    
//line rfc5424_gen.go:652
		}
	}

	_out: {}
	}

//line parser/parser_rfc5424.rl:39


    return m, errors.Join(errs...)
}


//line rfc5424_gen.go:666
const check_start int = 1
const check_first_final int = 10
const check_error int = 0

const check_en_main int = 1


//line parser/parser_rfc5424.rl:48


// isRFC5424 returns true if data is formatted as an RFC 5424 syslog message.
func isRFC5424(data string) bool {
    var isRFC5424 bool
    var p, cs int

    pe := len(data)

    
//line rfc5424_gen.go:685
	{
	cs = check_start
	}

//line rfc5424_gen.go:690
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	}
	goto st_out
	st_case_1:
		if data[p] == 60 {
			goto st2
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if 48 <= data[p] && data[p] <= 57 {
			goto st3
		}
		goto st0
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		if data[p] == 62 {
			goto st4
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st3
		}
		goto st0
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		if 48 <= data[p] && data[p] <= 57 {
			goto st5
		}
		goto st0
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		if data[p] == 32 {
			goto st6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st5
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		if 48 <= data[p] && data[p] <= 57 {
			goto tr6
		}
		goto st0
tr6:
//line parser/parser_rfc5424.rl:58

            isRFC5424 = true
        
	goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line rfc5424_gen.go:791
		if 48 <= data[p] && data[p] <= 57 {
			goto st8
		}
		goto st0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		if 48 <= data[p] && data[p] <= 57 {
			goto st9
		}
		goto st0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		if 48 <= data[p] && data[p] <= 57 {
			goto st10
		}
		goto st0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		goto st0
	st_out:
	_test_eof2: cs = 2; goto _test_eof
	_test_eof3: cs = 3; goto _test_eof
	_test_eof4: cs = 4; goto _test_eof
	_test_eof5: cs = 5; goto _test_eof
	_test_eof6: cs = 6; goto _test_eof
	_test_eof7: cs = 7; goto _test_eof
	_test_eof8: cs = 8; goto _test_eof
	_test_eof9: cs = 9; goto _test_eof
	_test_eof10: cs = 10; goto _test_eof

	_test_eof: {}
	_out: {}
	}

//line parser/parser_rfc5424.rl:69


    return isRFC5424
}


//line rfc5424_gen.go:842
const parse_sd_start int = 1
const parse_sd_first_final int = 73
const parse_sd_error int = 0

const parse_sd_en_main int = 1


//line parser/parser_rfc5424.rl:78


// parseStructuredData performs a best effort parsing of the raw structured data value
// extracted from the syslog message. If the raw structured data value is an empty
// string or the nil value ('-'), nil is returned. Otherwise, the value is parsed
// using the format defined by RFC 5424. If the value cannot be parsed, then nil
// is returned.
func parseStructuredData(data string) map[string]interface{} {
    var s machineState
    var p, cs, tok int

    pe := len(data)
    structuredData := map[string]interface{}{}

    if data == "" || data == "-" {
        return nil
    }

    
//line rfc5424_gen.go:870
	{
	cs = parse_sd_start
	}

//line rfc5424_gen.go:875
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 73:
		goto st_case_73
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	}
	goto st_out
	st_case_1:
		if data[p] == 91 {
			goto st2
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 33 {
			goto tr2
		}
		switch {
		case data[p] < 62:
			if 35 <= data[p] && data[p] <= 60 {
				goto tr2
			}
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto tr2
			}
		default:
			goto tr2
		}
		goto st0
tr2:
//line parser/common.rl:4

        tok = p
    
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line rfc5424_gen.go:1072
		switch data[p] {
		case 32:
			goto tr3
		case 33:
			goto st42
		case 93:
			goto tr5
		}
		switch {
		case data[p] > 60:
			if 62 <= data[p] && data[p] <= 126 {
				goto st42
			}
		case data[p] >= 35:
			goto st42
		}
		goto st0
tr3:
//line parser/rfc5424.rl:43

        s.sdID = data[tok:p]
        if _, ok := structuredData[s.sdID]; !ok {
            structuredData[s.sdID] = map[string]interface{}{}
        }
    
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line rfc5424_gen.go:1104
		if data[p] == 33 {
			goto tr6
		}
		switch {
		case data[p] < 62:
			if 35 <= data[p] && data[p] <= 60 {
				goto tr6
			}
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto tr6
			}
		default:
			goto tr6
		}
		goto st0
tr6:
//line parser/common.rl:4

        tok = p
    
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line rfc5424_gen.go:1132
		switch data[p] {
		case 33:
			goto st6
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st6
			}
		case data[p] >= 35:
			goto st6
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 33:
			goto st7
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st7
			}
		case data[p] >= 35:
			goto st7
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 33:
			goto st8
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st8
			}
		case data[p] >= 35:
			goto st8
		}
		goto st0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 33:
			goto st9
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st9
			}
		case data[p] >= 35:
			goto st9
		}
		goto st0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 33:
			goto st10
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st10
			}
		case data[p] >= 35:
			goto st10
		}
		goto st0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 33:
			goto st11
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st11
			}
		case data[p] >= 35:
			goto st11
		}
		goto st0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 33:
			goto st12
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st12
			}
		case data[p] >= 35:
			goto st12
		}
		goto st0
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 33:
			goto st13
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st13
			}
		case data[p] >= 35:
			goto st13
		}
		goto st0
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 33:
			goto st14
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st14
			}
		case data[p] >= 35:
			goto st14
		}
		goto st0
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 33:
			goto st15
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st15
			}
		case data[p] >= 35:
			goto st15
		}
		goto st0
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 33:
			goto st16
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st16
			}
		case data[p] >= 35:
			goto st16
		}
		goto st0
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 33:
			goto st17
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st17
			}
		case data[p] >= 35:
			goto st17
		}
		goto st0
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 33:
			goto st18
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st18
			}
		case data[p] >= 35:
			goto st18
		}
		goto st0
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 33:
			goto st19
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st19
			}
		case data[p] >= 35:
			goto st19
		}
		goto st0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 33:
			goto st20
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st20
			}
		case data[p] >= 35:
			goto st20
		}
		goto st0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 33:
			goto st21
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st21
			}
		case data[p] >= 35:
			goto st21
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 33:
			goto st22
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st22
			}
		case data[p] >= 35:
			goto st22
		}
		goto st0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 33:
			goto st23
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st23
			}
		case data[p] >= 35:
			goto st23
		}
		goto st0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 33:
			goto st24
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st24
			}
		case data[p] >= 35:
			goto st24
		}
		goto st0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 33:
			goto st25
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st25
			}
		case data[p] >= 35:
			goto st25
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 33:
			goto st26
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st26
			}
		case data[p] >= 35:
			goto st26
		}
		goto st0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 33:
			goto st27
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st27
			}
		case data[p] >= 35:
			goto st27
		}
		goto st0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 33:
			goto st28
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st28
			}
		case data[p] >= 35:
			goto st28
		}
		goto st0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 33:
			goto st29
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st29
			}
		case data[p] >= 35:
			goto st29
		}
		goto st0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 33:
			goto st30
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st30
			}
		case data[p] >= 35:
			goto st30
		}
		goto st0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 33:
			goto st31
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st31
			}
		case data[p] >= 35:
			goto st31
		}
		goto st0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 33:
			goto st32
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st32
			}
		case data[p] >= 35:
			goto st32
		}
		goto st0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch data[p] {
		case 33:
			goto st33
		case 61:
			goto tr8
		}
		switch {
		case data[p] > 92:
			if 94 <= data[p] && data[p] <= 126 {
				goto st33
			}
		case data[p] >= 35:
			goto st33
		}
		goto st0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
